# faucet-cli

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  moon.yml  package.json  pnpm-workspace.yaml
.changeset/: config.json
.github/workflows/: release.yml
.moon/: workspace.yml
npm/darwin-arm64/: CHANGELOG.md  package.json
npm/darwin-x64/: CHANGELOG.md  package.json
npm/linux-arm64/: CHANGELOG.md  package.json
npm/linux-x64/: CHANGELOG.md  package.json
npm/win32-arm64/: CHANGELOG.md  package.json
npm/win32-x64/: CHANGELOG.md  package.json
scripts/: publish.mjs
src/: api.rs  cli.rs  errors.rs  main.rs
src/commands/: claim.rs  mod.rs  whoami.rs
test/: integration.test.ts
