[package]
name = "zeko-faucet"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "zeko-faucet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
